# python-control

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  ChangeLog  LICENSE  MANIFEST.in  Pending  README  README.rst  Tests-of-Plotting-Tools.ipynb  asv.conf.json  doc-requirements.txt  make_version.py  passivity_test.ipynb  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.cfg  setup.py
benchmarks/: README  flatsys_bench.py  optestim_bench.py  optimal_bench.py
conda-recipe/: bld.bat  build.sh  meta.yaml
control/: __init__.py  bdalg.py  canonical.py  config.py  ctrlplot.py  ctrlutil.py  dde.py  delay.py  delaylti.py  descfcn.py  dtime.py  enter.py  exception.py  frdata.py  freqplot.py  grid.py  iosys.py  julia_utils.py  lti.py  margins.py  mateqn.py  matlab.py  modelsimp.py  namedio.py  nichols.py  nlsys.py  nltools.py  obc.py  optimal.py  partitionedssp.py  passivity.py  phaseplot.py  plotutil.py  pzmap.py  rlocus.py  robust.py  setup.py  sisotool.py  ss_plot.py  statefbk.py  (+7 more)
doc/: .gitignore  Makefile  README  analysis.rst  bdalg_strings.rst  class_strings.rst  classes.fig  classes.rst  conf.py  config.rst  control.rst  control.tex  conventions.rst  creation.rst  cruise-control.py  cruise-control.rst  cruise.ipynb  descfcn.rst  describing_functions.ipynb  develop.rst  era_msd.py  examples.rst  flatsys.rst  freqplot.rst  freqresp.rst  functions.rst  index.rst  interconnect_tutorial.ipynb  intro.rst  iosys.rst  kincar-flatsys.py  kincar-flatsys.rst  kincar-fusion.ipynb  linear.rst  markov.py  markov.rst  matlab.rst  matlab_strings.rst  mhe-pvtol.ipynb  modsimp_strings.rst  (+51 more)
examples/: .gitignore  DC Motor.py  Makefile  README  bdalg-matlab.py  bode-and-nyquist-plots.ipynb  bode-plot.ipynb  cds101_bode-nyquist.ipynb  cds101_invpend-dynamics.ipynb  cds110-L1_servomech-python.ipynb  cds110-L2_invpend-dynamics.ipynb  cds110-L3_lti-systems.ipynb  cds110-L4a_predprey-statefbk.ipynb  cds110-L4b_lqr-tracking.ipynb  cds110-L5_kincar-estimation.ipynb  cds110-L6a_kincar-trajgen.ipynb  cds110-L6b_kincar-tracking.ipynb  cds110-L6c_doubleint-rhc.ipynb  cds110-L7_bode-nyquist.ipynb  cds110-L8a_maglev-limits.ipynb  cds110-L8b_pvtol-complete-limits.ipynb  cds110-L9_servomech-pid.ipynb  cds110_bode-nyquist.ipynb  cds110_invpend-dynamics.ipynb  cds110_lti-systems.ipynb  cds112-L1_python-control.ipynb  cds112-L2a_flatness.ipynb  cds112-L3a_linquad.ipynb  cds112-L3b_optimal.ipynb  cds112-L4a_lqr-tracking.ipynb  cds112-L5_rhc-doubleint.ipynb  cds112-L6_stochastic-linsys.ipynb  cds112-L7_kalman-pvtol.ipynb  cds112-L8_fusion-kincar.ipynb  cds112-L9_mhe-pvtol.ipynb  cds112-W1_python-control.ipynb  cds112-W2_gainsched.ipynb  cds112-W4_pvtol-lqr.ipynb  cds112-W6_stochastic-linsys.ipynb  cds112-W7_kalman-pvtol.ipynb  (+63 more)
notebooks/: IO_Cleanup.ipynb
scratch/: minreal.py  svninfo.txt  test.m  test.py
src/: TestBDAlg.py  TestConvert.py  TestFreqRsp.py  TestMatlab.py  TestModelsimp.py  TestSlycot.py  TestStateSp.py  TestStatefbk.py  TestXferFcn.py  __init__.py  bdalg.py  canonical.py  config.py  ctrlutil.py  delay.py  dtime.py  exception.py  frdata.py  freqplot.py  lti.py  lti2.py  margins.py  mateqn.py  matlab.py  modelsimp.py  nichols.py  phaseplot.py  pzmap.py  rlocus.py  robust.py  statefbk.py  statesp.py  test.py  timeresp.py  xferfcn.py
tests/: bdalg_test.py  convert_test.py  discrete_test.py  frd_test.py  margin_test.py  (+14 more)
(+162 files in other folders)
