[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "control"
description = "Python Control Systems Library"
authors = [{name = "Python Control Developers", email = "python-control-developers@lists.sourceforge.net"}]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy>=1.3",
    "matplotlib",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["control"]

[project.optional-dependencies]
test = ["pytest", "pytest-timeout"]
slycot = [ "slycot>=0.4.0" ]
cvxopt = [ "cvxopt>=1.2.0" ]

[project.urls]
homepage = "https//python-control.org"
source = "https://github.com/python-control/python-control"

[tool.setuptools_scm]
write_to = "control/_version.py"

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
    "error:.*matrix subclass:PendingDeprecationWarning",
]
